-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: WiredTiger
-
Fully Compatible
-
ALL
-
Storage NYC 2019-02-11, Storage NYC 2019-02-25
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A scalar field is not initialized by the constructor
Defect 105236 (STATIC_C)
Checker UNINIT_CTOR (subcategory none)
File: /src/mongo/db/storage/wiredtiger/wiredtiger_session_cache.cpp
Function mongo::WiredTigerSessionCache::WiredTigerSessionCache(__wt_connection *, mongo::ClockSource *)
/src/mongo/db/storage/wiredtiger/wiredtiger_session_cache.h, line: 336
Class member declaration for "_lastCommitOrAbortCounter".
std::uint64_t _lastCommitOrAbortCounter;
/src/mongo/db/storage/wiredtiger/wiredtiger_session_cache.cpp, line: 241
Non-static class member "_lastCommitOrAbortCounter" is not initialized in this constructor nor in any functions that it calls.
: _engine(NULL), _conn(conn), _clockSource(cs), _shuttingDown(0) {}