SERVER-39047 Initialize _lastCommitOrAbortCounter in constructors